# hiyori-app

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  README.md  eslint.config.js  opencode.json  package-lock.json  package.json  skills-lock.json  svelte.config.js  vite.config.ts  vitest.config.ts
.agents/skills/add-icon/: SKILL.md
.agents/skills/add-provider-tips-rule/: SKILL.md
.agents/skills/chat-stream-parser/: SKILL.md
.claude/: settings.json
.claude/rules/typescript/: coding-style.md  patterns.md  security.md
.claude/skills/: chat-stream-parser
.claude/skills/chat-stream-parser/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: deploy.yml
scripts/: bump-version.mjs  clean-wasm.mjs  copy-wasm.mjs  update-config-manifest.mjs
src/: app.html  env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: greeting.svelte.ts  runtime.ts
src/lib/__tests__/: act-line-continuation.test.ts  act-lines.test.ts  act-summary-parser.test.ts  async.test.ts  canonicalName.test.ts  card-output-path.test.ts  character-card-generator.test.ts  character-profiles.test.ts  chat-callbacks.test.ts  chat-logger.test.ts  chat-stream.test.ts  config-manifest.test.ts  db-layer.test.ts  file-system.test.ts  file-tree.test.ts  game-data-parser.test.ts  memory.test.ts  (+27 more)
src/routes/: +layout.css  +layout.svelte  +page.svelte
static/: manifest.webmanifest  sw.js
static/fonts/: noto-cjk.css
(+422 files in other folders)
