[package]
name = "app"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"

# Desktop-only deps — sqlite-vec + libsqlite3-sys are excluded from Android
# (memory/vector search is desktop-only per D6 in the Android build plan)
[target.'cfg(not(target_os = "android"))'.dependencies]
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
sqlite-vec = "0.1"
